[package]
name = "snake"
version = "0.1.0"
authors = ["adder46 <dedmauz69@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncurses = { version = "5.99.0", features = ["wide"] }
rand = "0.7.3"

[dev-dependencies]
rstest = "0.6.4"
